--- a/the_project/todo-app/package.json
+++ b/the_project/todo-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "log_output",
+  "name": "todo-app",
   "version": "1.0.0",
   "description": "",
   "license": "ISC",
@@ -8,5 +8,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "^5.1.0"
   }
 }
