--- a/the_project/todo-app/manifests/deployment.yaml
+++ b/the_project/todo-app/manifests/deployment.yaml
@@ -14,4 +14,7 @@ spec:
     spec:
       containers:
         - name: todo-app
-          image: fialco/todo-app:1.0
+          image: fialco/todo-app:1.1
+          env:
+            - name: PORT
+              value: "3000"
