--- a/log_output/manifests/ingress.yaml
+++ b/log_output/manifests/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: log-material-ingress
+  name: log-ping-ingress
 spec:
   rules:
     - http:
@@ -11,5 +11,12 @@ spec:
             backend:
               service:
                 name: log-svc
+                port:
+                  number: 2345
+          - path: /pingpong
+            pathType: Prefix
+            backend:
+              service:
+                name: ping-pong-svc
                 port:
                   number: 2345
