--- a/log_output/manifests/ingress.yaml
+++ b/log_output/manifests/ingress.yaml
@@ -10,7 +10,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: log-svc
+                name: logs-svc
                 port:
                   number: 2345
           - path: /pingpong
