--- a/log_output/manifests/service.yaml
+++ b/log_output/manifests/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: log-svc
+  name: logs-svc
 spec:
   type: ClusterIP
   selector:
-    app: log-output
+    app: logs
   ports:
     - port: 2345
       protocol: TCP
