--- a/ping-pong-app/manifests/deployment.yaml
+++ b/ping-pong-app/manifests/deployment.yaml
@@ -12,9 +12,16 @@ spec:
       labels:
         app: ping-pong-app
     spec:
+      volumes:
+        - name: shared-logs
+          persistentVolumeClaim:
+            claimName: image-claim
       containers:
-        - name: ping-pong-app
-          image: fialco/ping-pong:1.0
+        - name: ping-pong
+          image: fialco/ping-pong:1.1
           env:
             - name: PORT
               value: "3000"
+          volumeMounts:
+            - name: shared-logs
+              mountPath: /usr/src/app/files
