--- a/the_project/todo-app/package.json
+++ b/the_project/todo-app/package.json
@@ -10,6 +10,8 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   }
 }
