--- a/the_project/todo-app/Dockerfile
+++ b/the_project/todo-app/Dockerfile
@@ -4,8 +4,12 @@ WORKDIR /usr/src/app
 
 COPY package* ./
 
-RUN npm ci
+RUN npm install 
 
 COPY . .
 
-CMD ["npm", "start"]
+RUN npm run build
+
+EXPOSE 5173
+
+CMD ["npm", "run", "preview", "--", "--host", "0.0.0.0", "--port", "5173"]
