--- a/the_project/todo-app/manifests/ingress.yaml
+++ b/the_project/todo-app/manifests/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: todo-material-ingress
+  name: todo-ingress
 spec:
   rules:
     - http:
@@ -12,4 +12,11 @@ spec:
               service:
                 name: todo-app-svc
                 port:
-                  number: 2345
+                  number: 5173
+          - path: /api
+            pathType: Prefix
+            backend:
+              service:
+                name: todo-backend-svc
+                port:
+                  number: 3000
