--- a/the_project/todo-backend/manifests/deployment.yaml
+++ b/the_project/todo-backend/manifests/deployment.yaml
@@ -19,7 +19,8 @@ spec:
             claimName: image-claim
       containers:
         - name: todo-backend
-          image: fialco/todo-backend:1.0.6
+          image: fialco/todo-backend:1.1.0
+          imagePullPolicy: IfNotPresent
           env:
             - name: PORT
               value: "3000"
